--- a/package.json
+++ b/package.json
@@ -11,19 +11,18 @@
   },
   "dependencies": {
     "@eva-design/eva": "2.0.0",
-    "@ui-kitten/components": "5.0.0",
-    "@ui-kitten/eva-icons": "5.0.0",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/datetimepicker": "^3.0.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
-    "react": "16.11.0",
-    "react-native": "0.62.2",
-    "react-native-svg": "^12.1.0",
+    "@ui-kitten/components": "5.0.0",
+    "@ui-kitten/eva-icons": "5.0.0",
     "axios": "^0.20.0",
     "date-fns": "^2.15.0",
+    "react": "16.11.0",
+    "react-native": "0.62.2",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-modal-datetime-picker": "^8.9.3",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
@@ -31,8 +30,9 @@
     "react-native-safe-area-context": "^3.1.4",
     "react-native-screens": "^2.10.1",
     "react-native-simple-toast": "^1.1.3",
+    "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^7.0.0",
-    "react-native-week-view": "0.0.16"
+    "react-native-week-view": "^0.0.19"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
@@ -43,8 +43,8 @@
     "eslint": "^6.5.1",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.58.0",
-    "react-test-renderer": "16.11.0",
-    "prettier": "^2.0.2"
+    "prettier": "^2.0.2",
+    "react-test-renderer": "16.11.0"
   },
   "jest": {
     "preset": "react-native",
